fix: Sidebar label alignment

--- a/frappe/public/scss/sidebar.scss
+++ b/frappe/public/scss/sidebar.scss
@@ -52,8 +52,14 @@ body[data-route^="Module"] .main-menu {
 	.sidebar-label {
 		margin-bottom: var(--margin-sm);
 		font-weight: 500;
+		display: flex;
+		align-items: center;
 		color: var(--text-color);
-		--icon-stroke: var(--text-muted);
+		.icon {
+			margin: 0;
+			margin-right: var(--margin-xs);
+			--icon-stroke: var(--text-muted);
+		}
 	}
 }
 
